use URIs instead of URLs as Java representation of xsd:anyURI