@@ -3,29 +3,39 @@ package de.fraunhofer.iais.eis.stories;
 import de.fraunhofer.iais.eis.*;
 import de.fraunhofer.iais.eis.util.ConstraintViolationException;
 import de.fraunhofer.iais.eis.util.PlainLiteral;
+import de.fraunhofer.iais.eis.util.VocabUtil;
 import org.junit.Assert;
 import org.junit.Test;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
 
 public class MqttProtocolBindingTest {
     /**
-     * todo: align with logistics use case
      * As a data owner I want to provide a service that (1) clients can subscribe to get information about sensor values
      * and (2) clients can publish their own observations for consumptions by other clients
      */
 
-    private Operation readSensorDataOperation;
+    private Operation subscribeSensorDataOperation;
+    private Parameter subscriptionOutputParam;
 
     @Test
-    public void createEndpointWithProtocolBinding() throws ConstraintViolationException, MalformedURLException {
+    public void createEndpointWithProtocolBinding() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
         DataEndpoint endpoint = createEndpoint();
-        Assert.fail();
+        String rdf = endpoint.toRdf();
+        DataEndpoint deser = (DataEndpoint) VocabUtil.fromRdf(rdf);
+
+        Assert.assertFalse(deser.getOffers().getOperations().isEmpty());
+        Assert.assertFalse(deser.getProtocolBinding().getOperationBindings().isEmpty());
+
+        OperationBinding opBinding = deser.getProtocolBinding().getOperationBindings().iterator().next();
+        Assert.assertTrue(opBinding instanceof OperationMqttBinding);
     }
 
-    private DataEndpoint createEndpoint() throws ConstraintViolationException, MalformedURLException {
+    private DataEndpoint createEndpoint() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
         return new DataEndpointBuilder()
             .offers(createOffering())
             .protocolBinding(createProtocolBinding())
@@ -36,25 +46,30 @@ public class MqttProtocolBindingTest {
             .build();
     }
 
-    private DataService createOffering() throws ConstraintViolationException, MalformedURLException {
+    private DataService createOffering() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
+        subscribeSensorDataOperation = createSubscribeOperation();
+
         return new DataServiceBuilder()
-            .operations(Arrays.asList(createSubscribeOperation()))
+            .operations(Arrays.asList(subscribeSensorDataOperation))
             .build();
     }
 
-    private Operation createSubscribeOperation() throws ConstraintViolationException, MalformedURLException {
+    private Operation createSubscribeOperation() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
         // define a subscribe method to be notified on sensor values of a specific type of sensor
         return new SubscribeOperationBuilder()
+
+                .opLabels(Arrays.asList(new PlainLiteral("Subscription operation for data of a sensor of a certain type.", "en")))
+
                 .inputs(Arrays.asList(createSubscriptionInputParameter()))
                 .outputs(Arrays.asList(createSubscriptionOutputParameter()))
                 .build();
     }
 
-    private InputParameter createSubscriptionInputParameter() throws ConstraintViolationException, MalformedURLException {
+    private InputParameter createSubscriptionInputParameter() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
 
         Representation stringIdentifier = new RepresentationBuilder()
             .dataType(ParameterDataType.XSD_STRING)
-            .conformsToStandard(new URL("http://sensorcompany/sensorTypes"))
+            .conformsToStandard(new URI("http://sensorcompany/sensorTypes"))
             .build();
 
         Parameter sensorIdParam = new InputParameterBuilder()
@@ -64,79 +79,40 @@ public class MqttProtocolBindingTest {
         return (InputParameter) sensorIdParam;
     }
 
-    private OutputParameter createSubscriptionOutputParameter() throws ConstraintViolationException, MalformedURLException {
+    private OutputParameter createSubscriptionOutputParameter() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
         Representation rdfSsnType = new RepresentationBuilder()
             .mediaType(IANAMediaType.APPLICATION_RDF_XML)
-            .conformsToStandard(new URL("http://purl.oclc.org/NET/ssnx/ssn"))
+            .conformsToStandard(new URI("http://purl.oclc.org/NET/ssnx/ssn"))
             .build();
 
-        Parameter sensorValuesParam = new OutputParameterBuilder()
+        subscriptionOutputParam = new OutputParameterBuilder()
             .representation(rdfSsnType)
             .build();
-        return (OutputParameter) sensorValuesParam;
+        return (OutputParameter) subscriptionOutputParam;
     }
 
-    private ProtocolBinding createProtocolBinding() throws ConstraintViolationException {
+    private ProtocolBinding createProtocolBinding() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
         return new ProtocolBindingBuilder()
             .operationBindings(Arrays.asList(createOperationBinding()))
             .build();
     }
 
-    // Specifies an URL (uriTemplate) to invoke the service
-    private OperationBinding createOperationBinding() throws ConstraintViolationException {
+    private OperationBinding createOperationBinding() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
         return new OperationMqttBindingBuilder()
-                .boundOperation()
-        /*
-        return new OperationHttpBindingBuilder()
-            .boundOperation(readSensorDataOperation)
-            .httpMethod(HTTPMethod.HTTP_GET)
-            .uriTemplate("http://opcua-ids-connector:8080/sensors/{sensorId}")
-            .parameterBindings(Arrays.asList(createInputParamBinding(), createOutputParameterBinding()))
+            .boundOperation(subscribeSensorDataOperation)
+            .mqttBrokerUri(new URI("tcp://www.ids-participant/connector/mqttbroker:1883"))
+            .parameterBindings(Arrays.asList(createOutputParameterBinding()))
             .build();
-
-        subscribeSensorDataOperation
-                .outputs() <- describes message payload, e.g. basic type or json
-
-        publishSensorDataOperation
-                .input() <- describes message payload, e.g. basic type or json
-
-        new OperationMqttBindingBuilder()
-                .boundOperation(subscribeSensorDataOperation)
-                .brokerUrl("tcp://broker.mqttdashboard.com:1883")
-                .topic("home/temp")
-
-
-        new OperationMqttBindingBuilder()
-                .boundOperation(publishSensorDataOperation)
-                .brokerUrl("tcp://broker.mqttdashboard.com:1883")
-                .topic("home/temp")
-        */
-        return null;
     }
 
-    // Binds the input parameter description to the invocation URL using the parameter's name "sensorId"
-    private ParameterBinding createInputParamBinding() throws ConstraintViolationException {
-        /*
-        BindingApproach bindingApproach = new UriTemplateBindingApproachBuilder().build();
-
-        return new ParameterBindingBuilder()
-            .boundParameter(sensorIdParam)
-            .bindingApproach(bindingApproach)
-            .build();
-            */
-        return null;
-    }
-
-    // Binds the output parameter description to the HTTP response body of the operation.
     private ParameterBinding createOutputParameterBinding() throws ConstraintViolationException {
-        /*
-        BindingApproach bindingApproach = new HttpResponseBodyBindingApproachBuilder().build();
+        BindingApproach bindingApproach = new MqttParamControlledTopicBindingApproachBuilder()
+                .mqttTopicName("topic/{sensorType}")
+                .build();
 
         return new ParameterBindingBuilder()
-            .boundParameter(sensorValuesParam)
+            .boundParameter(subscriptionOutputParam)
             .bindingApproach(bindingApproach)
             .build();
-            */
-        return null;
     }
 }
