@@ -5,6 +5,8 @@ import de.fraunhofer.iais.eis.util.ConstraintViolationException;
 import de.fraunhofer.iais.eis.util.PlainLiteral;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
 
@@ -12,17 +14,17 @@ public class StoryUtil {
 
     private URL operationUrl;
 
-    public DataService describeDataService() throws ConstraintViolationException, MalformedURLException {
+    public DataService describeDataService() throws ConstraintViolationException, MalformedURLException, URISyntaxException {
         return new DataServiceBuilder()
                 .operations(Arrays.asList(describeOperation()))
                 .publishes(describeDataAsset())
                 .build();
     }
 
-    private DataAsset describeDataAsset() throws MalformedURLException, ConstraintViolationException {
+    private DataAsset describeDataAsset() throws MalformedURLException, ConstraintViolationException, URISyntaxException {
         return new DataAssetBuilder()
                 .entityNames(Arrays.asList(new PlainLiteral("Development of company revenue", "en")))
-                .coversCategories(Arrays.asList(new URL("http://dbpedia.org/resource/Category:Finance")))
+                .coversCategories(Arrays.asList(new URI("http://dbpedia.org/resource/Category:Finance")))
                 .build();
     }
 
